# packattack-derive

./: Cargo.toml
src/: enum_from_bitreader.rs  enum_from_byte.rs  enum_from_bytes.rs  expand_scratchpad.rs  lib.rs  macro_test.rs  struct_from_bitreader.rs  struct_from_bytes.rs  unnamed_fields.rs  util.rs
src/attributes/: enums.rs  mod.rs
src/enum_compiler/: clauses.rs  mod.rs
src/struct_compiler/: bit_index.rs  fields.rs  mod.rs
src/struct_compiler/fields/: derivable.rs  from_bits.rs  from_bytes.rs  from_reader.rs  from_slice.rs  mod.rs
src/struct_from_bitreader/: mod.rs  named_fields.rs  unnamed_fields.rs
