[package]
name = "packattack_derive"
version = "0.1.0"
authors = ["Ethan Spurlock <ethan@spurlock.io>"]
edition = "2018"


[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["derive"] }
packattack = { path = "C:\\Users\\Ethan\\Desktop\\packattack" }
bitreader = "0.3.2"

[lib]
proc-macro = true