[package]
name = "packattack-derive"
version = "0.3.0"
authors = ["Ethan Spurlock <ethan@spurlock.io>"]
edition = "2018"
description = "A library for parsing packet grammers written only in Rust structs and enums"
license = "MIT"
keywords = ["packet","derive"]
repository = "https://github.com/vectorizer-labs/packattack-derive"


[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["derive"] }
bitreader = "0.3.2"

[lib]
proc-macro = true