[package]
name = "packattack-derive"
version = "0.3.1"
authors = ["Ethan Spurlock <ethan@spurlock.io>"]
edition = "2018"
description = "A set of derive macros for parsing binary packet grammers written only in Rust structs and enums"
license = "MIT"
keywords = ["packet","derive"]
repository = "https://github.com/vectorizer-labs/packattack-derive"


[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1.0.14", features = ["full"] }

[lib]
proc-macro = true